refactor(service): Aplica Inversão de Dependência e desacopla camada de serviço do HTTP